# sebastian

./: .dockerignore  .gitignore  .travis.yml  CONVENTIONS.md  Dockerfile  GEMINI.md  Jenkinsfile  Makefile  README.markdown  bootstrap.py  clump.py  config.mk  django.mk  docker-run.sh  entry-point.sh  fabfile.py  flake.nix  fly.toml  hashcolor.py  manage.py  mypy_requirements.txt  pyproject.toml  requirements.in  requirements.txt  ruff.toml  sebastian_rsa.enc  settings.py  settings_production.py  setup.cfg  shell.nix  three.py  tox.ini  urls.py
.github/: dependabot.yml  main.workflow
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  fly.yml  push.yml  scorecard.yml
apache/: django.wsgi  prod.conf  sample.conf
deploy/: deployment.yaml
leitner/: admin.py  forms.py  models.py  views.py
leitner/migrations/: 0001_initial.py  0005_auto__del_field_face_tex.py
leitner/templates/: add_card.html  base.html  card.html  deck.html  decks.html  index.html  stats.html  test.html
leitner/templates/registration/: login.html
leitner/templatetags/: deck_due.py
media/css/: site.css  style.css
media/js/: test.js
media/js/mochikit/.svn/: all-wcprops  entries
media/js/mochikit/MochiKit/.svn/: all-wcprops  entries
media/js/mochikit/doc/.svn/: all-wcprops  entries
media/js/mochikit/doc/html/.svn/: all-wcprops  entries
media/js/mochikit/doc/html/MochiKit/.svn/: all-wcprops  entries
media/js/mochikit/doc/js/.svn/: all-wcprops  entries
media/js/mochikit/doc/rst/.svn/: all-wcprops  entries
media/js/mochikit/doc/rst/MochiKit/.svn/: all-wcprops  entries
media/js/mochikit/examples/.svn/: all-wcprops  entries
media/js/mochikit/examples/ajax_tables/.svn/: all-wcprops  entries
media/js/mochikit/examples/color_wheel/.svn/: all-wcprops  entries
media/js/mochikit/examples/dnd_sortable/.svn/: all-wcprops  entries
media/js/mochikit/examples/draggable/.svn/: all-wcprops  entries
media/js/mochikit/examples/effects/.svn/: all-wcprops  entries
media/js/mochikit/examples/interpreter/.svn/: all-wcprops  entries
media/js/mochikit/examples/key_events/.svn/: all-wcprops  entries
media/js/mochikit/examples/logging_pane/.svn/: all-wcprops  entries
media/js/mochikit/examples/mochiregexp/.svn/: all-wcprops  entries
media/js/mochikit/examples/rounded_corners/.svn/: all-wcprops  entries
media/js/mochikit/examples/simple_dnd/.svn/: all-wcprops  entries
media/js/mochikit/examples/sortable_tables/.svn/: all-wcprops  entries
media/js/mochikit/examples/view-source/.svn/: all-wcprops  entries
media/js/mochikit/examples/view-source/lib/.svn/: all-wcprops  entries
media/js/mochikit/examples/view-source/lib/SyntaxHighlighter/.svn/: all-wcprops  entries
media/js/mochikit/include/.svn/: all-wcprops  entries
media/js/mochikit/include/_img/.svn/: all-wcprops  entries
media/js/mochikit/include/css/.svn/: all-wcprops  entries
media/js/mochikit/packed/.svn/: all-wcprops  entries
media/js/mochikit/packed/MochiKit/.svn/: all-wcprops  entries
media/js/mochikit/scripts/.svn/: all-wcprops  entries
media/js/mochikit/tests/.svn/: all-wcprops  entries
media/js/mochikit/tests/SimpleTest/.svn/: all-wcprops  entries
requirements/: apps.txt  libs.txt
sebastian/: hashcolor.py  settings.py  settings_docker.py  settings_production.py  settings_shared.py  urls.py  wsgi.py
sebastian/leitner/: admin.py  forms.py  models.py  selectors.py  service.py  smoke.py  views.py
sebastian/leitner/migrations/: 0001_initial.py  0002_auto__add_field_card_deck.py  0002_remove_face_image.py  0003_alter_face_content.py  0003_userdeckmerge.py  0004_auto__del_deckcard__chg_field_card_deck.py
sebastian/leitner/templates/: add_card.html  base.html  card.html  deck.html  decks.html  index.html  stats.html  test.html
sebastian/leitner/templates/registration/: login.html
sebastian/leitner/templatetags/: deck_due.py
sebastian/leitner/tests/: factories.py  test_hashcolor.py  test_models.py  test_selectors.py  test_selectors_hypothesis.py  test_service.py  test_service_hypothesis.py  test_views.py
static/js/: test.js
