[project]
name = "sebastian"
version = "0.1.0"
description = "SRS app"
readme = "README.markdown"
requires-python = ">=3.12"
dependencies = [
"Django==5.1.13",
"psycopg==3.2.12",
"gunicorn==23.0.0",
"django-smoketest==1.2.1",
"django-debug-toolbar==6.1.0",
"sentry-sdk==2.43.0",
"whitenoise==6.11.0",
"factory_boy==3.3.3",
]
[dependency-groups]
dev = [
"mypy==1.11.1",
"typing-extensions==4.15.0",
"mypy-extensions==1.1.0",
"django-stubs[compatible-mypy]==5.0.4",
"ruff==0.14.3",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    ]
ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# disallow_subclassing_any = true
disallow_untyped_decorators = true
# disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true
warn_return_any = true
exclude = [
    'tests',
]

[tool.django-stubs]
django_settings_module = "sebastian.settings"

[tool.ruff]
exclude = ["migrations"]
line-length = 79

[tool.ruff.lint.mccabe]
max-complexity = 5
