[project]
name = "sebastian"
version = "0.1.0"
description = "SRS app"
readme = "README.markdown"
requires-python = ">=3.12"
dependencies = [
"Django==6.0.1",
"psycopg==3.3.2",
"gunicorn==25.0.3",
"django-smoketest==1.2.1",
"django-debug-toolbar==6.2.0",
"sentry-sdk==2.52.0",
"whitenoise==6.11.0",
"factory_boy==3.3.3",
]
[dependency-groups]
dev = [
"mypy==1.11.1",
"typing-extensions==4.15.0",
"mypy-extensions==1.1.0",
"django-stubs[compatible-mypy]==5.0.4",
"ruff==0.15.1",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    ]
ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# disallow_subclassing_any = true
disallow_untyped_decorators = true
# disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true
warn_return_any = true
exclude = [
    'tests',
]

[tool.django-stubs]
django_settings_module = "sebastian.settings"

[tool.ruff]
exclude = [
    "migrations",
]

line-length = 79

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "C901", # McCabe complexity
  "I",
  "T201",
  "C90",
  "S",
  "UP",
  "BLE",
  "B",
  "R",
  "YTT",
  "FBT",
  "DJ",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 5
