[project]
name = "sebastian"
version = "0.1.0"
description = "SRS app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.5",
    "gunicorn==26.0.0",
    "django-smoketest==1.2.1",
    "django-debug-toolbar==6.3.0",
    "sentry-sdk==2.59.0",
    "whitenoise==6.12.0",
    "factory_boy==3.3.3",
    "psycopg-binary>=3.3.4",
    "psycopg>=3.3.4",
]

[tool.setuptools]
packages = ["sebastian"]

[dependency-groups]
dev = [
"mypy==1.11.1",
"typing-extensions==4.15.0",
"mypy-extensions==1.1.0",
"django-stubs[compatible-mypy]==5.0.4",
"ruff==0.15.12",
"hypothesis==6.152.4",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    ]
ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
# disallow_subclassing_any = true
disallow_untyped_decorators = true
# disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true
warn_return_any = true
exclude = [
    'tests',
]

[tool.django-stubs]
django_settings_module = "sebastian.settings"

[tool.ruff]
exclude = [
    "migrations",
]

line-length = 79

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "C901", # McCabe complexity
  "I",
  "T201",
  "C90",
  "S",
  "UP",
  "BLE",
  "B",
  "R",
  "YTT",
  "FBT",
  "DJ",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 5
